@@ -1,4 +1,5 @@
 0.33
+ - Add error if field 008 isn't present.
  - Add use case for clean_serial_order().
  - Remove all other characters than number from edition number.
  - Remove all other characters than number from series ordinal.
